fix：Change the z-index of footer from 9999 to 9998

--- a/assets/_scss/_footer.scss
+++ b/assets/_scss/_footer.scss
@@ -5,5 +5,5 @@ html {
 footer.wp-block-template-part {
 	position: sticky;
 	top: 100vh;
-	z-index:9999;
+	z-index:9998;
 }
